--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -57,7 +57,8 @@
 
 .livro-card:hover {
   transform: translateY(-6px);
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 12px;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.15);
 }
 
 .livro-card img {
