--- a/frontend/src/css/Configuracao.css
+++ b/frontend/src/css/Configuracao.css
@@ -8,7 +8,7 @@
   gap: 1.5rem;
   background: #fff;
   border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
 
 /* Títulos */
@@ -113,8 +113,8 @@ input:checked + .slider::before {
 }
 
 /* Botões */
-.botao-voltar {
-  background-color: var(--cor-principal);
+.botao {
+  background-color: var(--cor-hover-logout);
   color: var(--cor-texto-claro);
   border: none;
   padding: 0.6rem 1rem;
@@ -128,8 +128,8 @@ input:checked + .slider::before {
   gap: 0.5rem;
 }
 
-.botao-voltar:hover {
-  background-color: var(--cor-hover-logout);
+.botao:hover {
+  background-color: var(--cor-principal);
   transform: scale(1.05);
 }
 
@@ -221,12 +221,12 @@ input:checked + .slider::before {
 
 /* Botão confirmar ação */
 .modal-buttons .confirmar-btn {
-  background-color: var(--cor-principal);
+  background-color: var(--cor-hover-logout);
   color: var(--cor-texto-claro);
   border: none;
 }
 
 .modal-buttons .confirmar-btn:hover {
-  background-color: var(--cor-hover-logout);
+  background-color: var(--cor-principal);
   transform: scale(1.05);
 }
